--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -77,7 +77,7 @@ msgid ""
 " Include relevant links, such as to a campaign page, your blog or a\\n"
 "            twitter account. They will be made clickable. \\n            "
 "e.g."
-msgstr "Include link-uri relevante, precum cele către pagina campaniei, blogul tău sau către un cont de Twitter. Acestea vor fi accesibile direct din site. \\n e.g."
+msgstr "Include link-uri relevante, precum cele către pagina campaniei, blogul tău sau către rețele de socializare. Acestea vor fi accesibile direct din site. \\n e.g."
 
 msgid ""
 " Link to the information requested, if it is <strong>already "
@@ -1121,7 +1121,7 @@ msgid ""
 msgstr "Hello! Puteţi face cereri  \"Libertatea de informare\" în  {{country_name}} la {{link_to_website}}"
 
 msgid "Hello, {{username}}!"
-msgstr "Hello, {{username}}!"
+msgstr "Bine ai venit, {{username}}!"
 
 msgid "Help"
 msgstr "Ajutor"
@@ -3891,3 +3891,153 @@ msgstr "{{user}} ({{user_admin_link}}) a făcut această cerere {{law_used_full}
 
 msgid "{{user}} made this {{law_used_full}} request"
 msgstr "{{user}} a făcut această cerere {{law_used_full}} "
+
+##### UGLY HACK!!! #####
+# I appended to this file the content of https://raw.github.com/andreicristianpetcu/nuvasuparati-theme/master/locale-theme/ro_RO/app.po
+
+# Your theme's locale files will override the core locale files.  This
+# is a good place to put both translations specific to your theme, and
+# "translations" of the core English words
+
+# Homepage
+
+msgid "Quiénes somos"
+msgstr "Cine suntem noi"
+
+msgid "Guía para solicitantes"
+msgstr "Ghid pentru solicitări"
+
+msgid "Solicitar información"
+msgstr "Solicitări FOI"
+
+msgid "Buscar solicitudes"
+msgstr "Caută solicitări"
+
+msgid "Ejerce tu derecho a saber."
+msgstr "Exercită-ți dreptul de a ști!"
+
+msgid "Para obtener información de instituciones públicas:"
+msgstr "Pentru a obține informații de la instituțiile publice:"
+
+msgid "Piensa una pregunta para un organismo público."
+msgstr "Gândește-te la o întrebare pentru o instituție publică"
+
+msgid "Preguntar »"
+msgstr "Solicită »"
+
+msgid "Nosotros enviamos la pregunta por ti."
+msgstr "Vom transmite solicitarea pentru tine"
+
+msgid "Te avisamos cuando haya una respuesta."
+msgstr "Te vom anunța când vei primi un răspuns"
+
+msgid "¿Contestarán? »"
+msgstr "Va răspunde? »"
+
+msgid "Cuenta atrás por la transparencia en España"
+msgstr "Cronometru pentru transparență în România"
+
+msgid "Quedan <span id='days-left'></span> días para que el PP cumpla su promesa de presentar una ley de acceso a la información"
+msgstr "<span id='days-left'></span> zile rămase pentru ca PP să își îndeplinească promisiunea de a introduce o lege despre accesul la informații"
+
+msgid "Haz una búsqueda entre las peticiones ya realizadas:"
+msgstr "Caută prin silicitările deja existente:"
+
+msgid "Novedades"
+msgstr "Noutăți"
+
+msgid "Peticiones destacadas"
+msgstr "Solicitări remarcabile"
+
+
+# Sidebar
+
+msgid "¿Cómo funciona?"
+msgstr "Cum funcționează?"
+
+msgid "¿Quién creó tuderechoasaber.es?"
+msgstr "Cine a creat nuvăsupărați.info?"
+
+msgid "Patrocinadores"
+msgstr "Sponsori"
+
+msgid "¿Cómo nos puedes ayudar?"
+msgstr "Cum funcționează"
+
+msgid "Solicitar información"
+msgstr "Solicită infromații"
+
+msgid "Localizar la institución adecuada"
+msgstr "Găsește instituția portrivită"
+
+msgid "Idiomas"
+msgstr "Limbi"
+
+msgid "Consejos sobre las solicitudes"
+msgstr "Sfat pentru solicitări"
+
+msgid "Respuestas y apelaciones"
+msgstr "Răspunsuri și răspunsuri"
+
+msgid "Moderación de las solicitudes"
+msgstr "Moderarea solicitărilor"
+
+msgid "Tu privacidad"
+msgstr "Protecția detelor personale"
+
+msgid "Información para instituciones"
+msgstr "Informații pentru instituții"
+
+msgid "¿Qué es tuderechoasaber.es?"
+msgstr "Ce este nuvăsupărați.info?"
+
+msgid "Proceso de las solicitudes"
+msgstr "Procesarea solicitărilor"
+
+msgid "Privacidad"
+msgstr "Politică de Confidențialitate"
+
+msgid "Basado en Alaveteli"
+msgstr "Bazat pe Alaveteli"
+
+msgid "API para programadores"
+msgstr "API pentru programatori"
+
+msgid "Agradecimientos"
+msgstr "Mulțumiri"
+
+msgid "Contacto"
+msgstr "Contact"
+
+msgid "Prensa"
+msgstr "Presă"
+
+msgid "¿Cómo puedes colaborar?"
+msgstr "Cum puteți ajuta?"
+
+msgid "Condiciones de uso"
+msgstr "Termeni și condiții"
+
+msgid "Política de privacidad"
+msgstr "Politică de Confidențialitate"
+
+msgid "Ayuda"
+msgstr "Ajutor"
+
+msgid "Guía para realizar solicitudes"
+msgstr "Ghid pentru solicitări"
+
+msgid "API"
+msgstr "API"
+
+msgid "Contenido bajo licencia CC BY SA 3.0<br/>Creative Commons Attribution Share-Alike"
+msgstr "Conținut Licențiat CC BY SA 3.0<br/>Atribuire - Distribuire-în-condiţii-identice"
+
+msgid "Un proyecto de"
+msgstr "Un proiect de"
+
+msgid "Con la ayuda de"
+msgstr "Cu ajutorul"
+
+msgid "¡Colabora con nosotros!"
+msgstr "Colaborează cu noi"
