--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -178,7 +178,7 @@ msgid "<a href=\"%s\">Add an annotation</a> (to help the requester or others)"
 msgstr "<a href=\"%s\">Adaugă o notă</a> (pentru a ajuta petentul sau pe alții)"
 
 msgid "<a href=\"%s\">Are we missing a public authority?</a>"
-msgstr "<a href=\"%s\">Ne lipseşte o autoritate publică?</a>"
+msgstr "<a href=\"%s\">Ne lipseşte o instituție publică?</a>"
 
 msgid ""
 "<a href=\"%s\">Are you the owner of\\n            any commercial copyright "
@@ -189,7 +189,7 @@ msgid "<a href=\"%s\">Browse all</a> or <a href=\"%s\">ask us to add one</a>."
 msgstr "<a href=\"%s\">Caută în toată arhiva</a> sau <a href=\"%s\">cere-ne nouă să adăugăm una</a>."
 
 msgid "<a href=\"%s\">Can't find the one you want?</a>"
-msgstr "<a href=\"%s\">Nu găsești persoana căutată?</a>"
+msgstr "<a href=\"%s\">Nu găsești instituţia căutată?</a>"
 
 msgid ""
 "<a href=\"%s\">Sign in</a> to change password, subscriptions and more "
