--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -65,7 +65,7 @@ msgstr "Sfătuieşte-ne  cum să <strong>facem solicitarea cât mai clară </str
 msgid ""
 " Ideas on what <strong>other documents to request</strong> which the "
 "authority may hold. "
-msgstr "<strong>Alte  documente</strong> pe care le poţi solicita de la aceeaşi autoritate."
+msgstr "<strong>Alte  documente</strong> pe care le poţi solicita de la aceeaşi instituție."
 
 msgid ""
 " If you know the address to use, then please <a href=\"%s\">send it to "
@@ -148,7 +148,7 @@ msgid "'Pollution levels over time for the River Tyne'"
 msgstr "'Pollution levels over time for the River Tyne'"
 
 msgid "'{{link_to_authority}}', a public authority"
-msgstr "'{{link_to_authority}}', o autoritate publică"
+msgstr "'{{link_to_authority}}', o instituție publică"
 
 msgid "'{{link_to_request}}', a request"
 msgstr "'{{link_to_request}}', o solicitare"
@@ -163,7 +163,7 @@ msgid "- or -"
 msgstr "- sau -"
 
 msgid "1. Select an authority"
-msgstr "1. Selectează o autoritate"
+msgstr "1. Selectează o instituție"
 
 msgid "2. Ask for Information"
 msgstr "2. Solicită o informație"
@@ -219,7 +219,7 @@ msgid ""
 "            <li>We have <a href=\"{{other_means_url}}\">suggestions</a>\\n"
 "            on other means to answer your question.\\n            </li>\\n"
 "            </ul>"
-msgstr "<p>Mulțumim! Iată câteva idei despre ce ai putea face în continuare:</p>\\n <ul>\\n <li>Pentru a trimite solicitarea către o altă autoritate, copiază întâi textul solicitării tale mai jos, apoi <a href=\"{{find_authority_url}}\">găsește cealaltă autoritate</a>.</li>\\n <li>Dacă ai vrea să contești susținerea autorității că nu ar avea respectivele informații, aici găsești\\n <a href=\"{{complain_url}}\">cum să faci o plângere</a>.\\n </li>\\n <li>Avem <a href=\"{{other_means_url}}\">sugestii</a>\\n cu privire la alte mijloace pentru a primi răspuns la întrebarea ta.\\n </li>\\n </ul>"
+msgstr "<p>Mulțumim! Iată câteva idei despre ce ai putea face în continuare:</p>\\n <ul>\\n <li>Pentru a trimite solicitarea către o altă instituție, copiază întâi textul solicitării tale mai jos, apoi <a href=\"{{find_authority_url}}\">găsește cealaltă instituție</a>.</li>\\n <li>Dacă ai vrea să contești susținerea autorității că nu ar avea respectivele informații, aici găsești\\n <a href=\"{{complain_url}}\">cum să faci o plângere</a>.\\n </li>\\n <li>Avem <a href=\"{{other_means_url}}\">sugestii</a>\\n cu privire la alte mijloace pentru a primi răspuns la întrebarea ta.\\n </li>\\n </ul>"
 
 msgid ""
 "<p>Thank you! Hope you don't have to wait much longer.</p> <p>By law, you "
@@ -243,7 +243,7 @@ msgid ""
 "<p>Thank you! We'll look into what happened and try and fix it up.</p><p>If "
 "the error was a delivery failure, and you can find an up to date FOI email "
 "address for the authority, please tell us using the form below.</p>"
-msgstr "<p>Îţi mulţumim!  Vom verifica ce s-a întâmplat şi vom încerca să o rezolvăm.</p><p> Dacă eroarea era referitoare la trimite şi ne poţi oferi o altă adresă actualizată la care acestă autoritate primeşte solicitări de acces la informaţii, te rugăm să ne-o comunici prin formularul de mai jos.</p>"
+msgstr "<p>Îţi mulţumim!  Vom verifica ce s-a întâmplat şi vom încerca să o rezolvăm.</p><p> Dacă eroarea era referitoare la trimite şi ne poţi oferi o altă adresă actualizată la care acestă instituție primeşte solicitări de acces la informaţii, te rugăm să ne-o comunici prin formularul de mai jos.</p>"
 
 msgid ""
 "<p>Thank you! Your request is long overdue, by more than "
@@ -268,7 +268,7 @@ msgid ""
 "<p>We recommend that you edit your request and remove the email address.\\n"
 "                If you leave it, the email address will be sent to the "
 "authority, but will not be displayed on the site.</p>"
-msgstr "<p>Îți recomandăm să îți editezi solicitarea și să ștergi adresa de email.\\n Dacă o lași, adresa de email va fi trimisă către autoritate, dar nu va fi afișată pe site.</p>"
+msgstr "<p>Îți recomandăm să îți editezi solicitarea și să ștergi adresa de email.\\n Dacă o lași, adresa de email va fi trimisă către instituție, dar nu va fi afișată pe site.</p>"
 
 msgid ""
 "<p>We're glad you got all the information that you wanted. If you write "
@@ -310,7 +310,7 @@ msgid ""
 "<p>If you write about this request (for example in a forum or a blog) please"
 " link to this page, and add an\\n            annotation below telling people"
 " about your writing.</p>"
-msgstr "<p>Solicitarea ta {{law_used_full}} a fost <strong>transmisă</strong>!</p>\\n <p><strong>Vei primi un email</strong> când există un răspuns sau după {{late_number_of_days}} zile lucrătoare dacă autoritatea \\n încă nu a răspuns până atunci.</p>\\n <p>Dacă scrii despre această solicitare (de exemplu pe un forum sau pe un blog) te rugăm să faci referință către această pagină și adaugă o\\n adnotare mai jos pentru a spune oamenilor despre ce ai scris.</p>"
+msgstr "<p>Solicitarea ta {{law_used_full}} a fost <strong>transmisă</strong>!</p>\\n <p><strong>Vei primi un email</strong> când există un răspuns sau după {{late_number_of_days}} zile lucrătoare dacă instituțiea \\n încă nu a răspuns până atunci.</p>\\n <p>Dacă scrii despre această solicitare (de exemplu pe un forum sau pe un blog) te rugăm să faci referință către această pagină și adaugă o\\n adnotare mai jos pentru a spune oamenilor despre ce ai scris.</p>"
 
 msgid ""
 "<p>{{site_name}} is currently in maintenance. You can only view existing "
@@ -327,9 +327,9 @@ msgstr "<small>Dacă utilizaţi un serviciu email  de tip web sau dacă aveţi f
 msgid "<span id='follow_count'>%d</span> person is following this authority"
 msgid_plural ""
 "<span id='follow_count'>%d</span> people are following this authority"
-msgstr[0] "<span id='follow_count'>%d</span> persoană  urmăreşte această autoritate"
-msgstr[1] "<span id='follow_count'>%d</span> persoane  urmăresc această autoritate"
-msgstr[2] "<span id='follow_count'>%d</span> persoane  urmăresc această autoritate"
+msgstr[0] "<span id='follow_count'>%d</span> persoană  urmăreşte această instituție"
+msgstr[1] "<span id='follow_count'>%d</span> persoane  urmăresc această instituție"
+msgstr[2] "<span id='follow_count'>%d</span> persoane  urmăresc această instituție"
 
 msgid ""
 "<strong> Can I request information about myself?</strong>\\n\t\t\t<a "
@@ -414,7 +414,7 @@ msgstr "<strong>Niciun răspuns</strong> nu a fost primit\\n <small>(poate exist
 msgid ""
 "<strong>Note:</strong> Because we're testing, requests are being sent to "
 "{{email}} rather than to the actual authority."
-msgstr "<strong>Notă:</strong> Deoarece acum testăm, solicitările sunt trimise către {{email}} în loc de autoritatea efectivă."
+msgstr "<strong>Notă:</strong> Deoarece acum testăm, solicitările sunt trimise către {{email}} în loc de instituțiea efectivă."
 
 msgid ""
 "<strong>Note:</strong> You're sending a message to yourself, presumably\\n"
@@ -474,7 +474,7 @@ msgid ""
 msgstr "O nouă solicitare <em><a href=\"{{request_url}}\">{{request_title}}</a></em>, a fost trimisă către {{public_body_name}} de către{{info_request_user}} la {{date}}."
 
 msgid "A public authority"
-msgstr "O autoritate publică"
+msgstr "O instituție publică"
 
 msgid "A response will be sent <strong>by post</strong>"
 msgstr "Un răspuns va fi trimis<strong> prin poşta</strong>"
@@ -1014,7 +1014,7 @@ msgid "Follow things matching this search"
 msgstr "Urmărește chestiuni relevante pentru această căutare"
 
 msgid "Follow this authority"
-msgstr "Urmăriţi această autoritate"
+msgstr "Urmăriţi această instituție"
 
 msgid "Follow this link to see the request:"
 msgstr "Urmăriţi acest link pentru a vedea solicitarea:"
@@ -1051,14 +1051,14 @@ msgstr "Follow up-urile nu pot fi trimise pentru această solicitare, pentru că
 msgid ""
 "For an unknown reason, it is not possible to make a request to this "
 "authority."
-msgstr "Pentru motive necunoscute, nu este posibil să facem o solicitare către această autoritate."
+msgstr "Pentru motive necunoscute, nu este posibil să facem o solicitare către această instituție."
 
 msgid "Forgotten your password?"
 msgstr "Aţi uitat parola ?"
 
 msgid "Found %d public authority %s"
 msgid_plural "Found %d public authorities %s"
-msgstr[0] "Găsit %d autoritate publică %s"
+msgstr[0] "Găsit %d instituție publică %s"
 msgstr[1] "Găsit %d autorităţi publice %s"
 msgstr[2] "Găsit %d autorităţi publice %s"
 
@@ -1079,7 +1079,7 @@ msgstr "Legislaţia Libertăţii de Informare nu se mai  aplică la "
 msgid ""
 "Freedom of Information law no longer applies to this authority.Follow up "
 "messages to existing requests are sent to "
-msgstr "Legislaţia Libertăţii de Informare nu se mai  aplică la aceasta autoritate. Urmăririle aferente mesajelor existente sunt trimise către"
+msgstr "Legislaţia Libertăţii de Informare nu se mai  aplică la aceasta instituție. Urmăririle aferente mesajelor existente sunt trimise către"
 
 msgid "Freedom of Information requests made"
 msgstr "Cereri \"Libertatea de informare\" făcute"
@@ -1442,7 +1442,7 @@ msgid "Keywords"
 msgstr "Cuvinte cheie"
 
 msgid "Last authority viewed: "
-msgstr "Ultima autoritate vizionată"
+msgstr "Ultima instituție vizionată"
 
 msgid "Last request viewed: "
 msgstr "Ultima solicitare vizionată"
@@ -1526,7 +1526,7 @@ msgid "Missing contact details for '"
 msgstr "Lipsă detalii contact pentru  '"
 
 msgid "More about this authority"
-msgstr "Mai multe despre această autoritate"
+msgstr "Mai multe despre această instituție"
 
 msgid "More requests..."
 msgstr "Mai multe solicitări"
@@ -1662,7 +1662,7 @@ msgid "One person found"
 msgstr "O persoană găsită"
 
 msgid "One public authority found"
-msgstr "O autoritate publică găsită"
+msgstr "O instituție publică găsită"
 
 msgid "Only requests made using {{site_name}} are shown."
 msgstr "Numai solicitările facute utilizând {{site_name}} sunt afişate."
@@ -1670,12 +1670,12 @@ msgstr "Numai solicitările facute utilizând {{site_name}} sunt afişate."
 msgid ""
 "Only the authority can reply to this request, and I don't recognise the "
 "address this reply was sent from"
-msgstr "Numai autoritatea poate să răspundă la această solicitare. Nu recunoaștem adresa de la care a fost trimisă"
+msgstr "Numai instituțiea poate să răspundă la această solicitare. Nu recunoaștem adresa de la care a fost trimisă"
 
 msgid ""
 "Only the authority can reply to this request, but there is no \"From\" "
 "address to check against"
-msgstr "Numai autoritatea poate să răspundă la această solicitare.  Nu există o adresă  \"de la\" pentru verificare."
+msgstr "Numai instituțiea poate să răspundă la această solicitare.  Nu există o adresă  \"de la\" pentru verificare."
 
 msgid "Or search in their website for this information."
 msgstr "Sau căutaţi în site-ul lor această informaţie."
@@ -2169,7 +2169,7 @@ msgid "Response"
 msgstr "Răspuns"
 
 msgid "Response from a public authority"
-msgstr "Răspuns de la o autoritate publică"
+msgstr "Răspuns de la o instituție publică"
 
 msgid "Response to '{{title}}'"
 msgstr "Răspuns la '{{title}}'"
@@ -2235,10 +2235,10 @@ msgid "Search your contributions"
 msgstr "Caută contribuţia ta"
 
 msgid "Select one to see more information about the authority."
-msgstr "Selectaţi una pentru a vedea informaţii despre această autoritate"
+msgstr "Selectaţi una pentru a vedea informaţii despre această instituție"
 
 msgid "Select the authority to write to"
-msgstr "Selectaţi autoritatea căreia să îi scrieţi"
+msgstr "Selectaţi instituțiea căreia să îi scrieţi"
 
 msgid "Send a followup"
 msgstr "Trimiteţi o urmărire"
@@ -2340,7 +2340,7 @@ msgid "Sorry, we couldn't find that page"
 msgstr "Scuze, nu am găsit pagina"
 
 msgid "Special note for this authority!"
-msgstr "O notă specială pentru această autoritate!"
+msgstr "O notă specială pentru această instituție!"
 
 msgid "Start"
 msgstr "Start"
@@ -2512,7 +2512,7 @@ msgid "The request was <strong>successful</strong>."
 msgstr "Solicitarea a fost <strong>reuşită</strong>"
 
 msgid "The request was refused by the public authority"
-msgstr "Solicitarea a fost refuzată de către autoritatea publică"
+msgstr "Solicitarea a fost refuzată de către instituțiea publică"
 
 msgid ""
 "The request you have tried to view has been removed. There are\\nvarious "
@@ -2527,18 +2527,18 @@ msgid ""
 "The response to your request has been <strong>delayed</strong>.  You can say"
 " that, \\n            by law, the authority should normally have "
 "responded\\n            <strong>promptly</strong> and"
-msgstr "Răspunsul la solicitarea ta a fost <strong>întârziat</strong>. Poţi spune că, \\n potrivit legii, autoritatea ar fi trebuit să răspundă în mod normal\\n <strong>prompt</strong> şi"
+msgstr "Răspunsul la solicitarea ta a fost <strong>întârziat</strong>. Poţi spune că, \\n potrivit legii, instituțiea ar fi trebuit să răspundă în mod normal\\n <strong>prompt</strong> şi"
 
 msgid ""
 "The response to your request is <strong>long overdue</strong>.   You can say"
 " that, by \\n            law, under all circumstances, the authority should "
 "have responded\\n            by now"
-msgstr "Răspunsul la solicitarea ta este <strong>mult întârziat</strong>. Poţi spune că, potrivit \\n legii, în oricare circumstanţe, autoritatea ar fi trebuit să răspundă \\n până acum"
+msgstr "Răspunsul la solicitarea ta este <strong>mult întârziat</strong>. Poţi spune că, potrivit \\n legii, în oricare circumstanţe, instituțiea ar fi trebuit să răspundă \\n până acum"
 
 msgid ""
 "The search index is currently offline, so we can't show the Freedom of "
 "Information requests that have been made to this authority."
-msgstr "Acest index de căutare este în acest moment off-line, aşa ca nu putem afişa solicitările FOI făcute către această autoritate."
+msgstr "Acest index de căutare este în acest moment off-line, aşa ca nu putem afişa solicitările FOI făcute către această instituție."
 
 msgid ""
 "The search index is currently offline, so we can't show the Freedom of "
@@ -2691,7 +2691,7 @@ msgid "Things you're following"
 msgstr "Lucruri pe care le urmăriţi"
 
 msgid "This authority no longer exists, so you cannot make a request to it."
-msgstr "Această autoritate nu mai există, deci nu puteţi face o solicitare către aceasta."
+msgstr "Această instituție nu mai există, deci nu puteţi face o solicitare către aceasta."
 
 msgid ""
 "This comment has been hidden. See annotations to\\n            find out why."
@@ -2884,7 +2884,7 @@ msgstr "Pentru a urmări solicitările făcute de '{{user_name}}'"
 msgid ""
 "To follow requests made using {{site_name}} to the public authority "
 "'{{public_body_name}}'"
-msgstr "Pentru  a urmări solicitările făcute utilizând  {{site_name}} către autoritatea publică '{{public_body_name}}'"
+msgstr "Pentru  a urmări solicitările făcute utilizând  {{site_name}} către instituțiea publică '{{public_body_name}}'"
 
 msgid "To follow the request '{{request_title}}'"
 msgstr "Pentru a urmări solicitarea '{{request_title}}'"
@@ -3010,7 +3010,7 @@ msgid ""
 "Unfortunately we don't know the FOI\\nemail address for that authority, so "
 "we can't validate this.\\nPlease <a href=\"%s\">contact us</a> to sort it "
 "out."
-msgstr "Din păcate, nu ştim adresa de email pentru solicitări de acces la informaţii pentru respectiva autoritate, deci nu putem valida această solicitare. \\nTe rugăm <a href=\"%s\">să ne contactezi</a> pentru a vedea cum putem rezolva situaţia."
+msgstr "Din păcate, nu ştim adresa de email pentru solicitări de acces la informaţii pentru respectiva instituție, deci nu putem valida această solicitare. \\nTe rugăm <a href=\"%s\">să ne contactezi</a> pentru a vedea cum putem rezolva situaţia."
 
 msgid ""
 "Unfortunately, we do not have a working "
@@ -3140,7 +3140,7 @@ msgstr "Aşteaptă o  <strong>revizuire internă</strong> de către {{public_bod
 msgid ""
 "Waiting for the public authority to complete an internal review of their "
 "handling of the request"
-msgstr "Aşteaptă autoritatea publică să finalizeze o reviuire internă a prelucrării acestei solicitări."
+msgstr "Aşteaptă instituțiea publică să finalizeze o reviuire internă a prelucrării acestei solicitări."
 
 msgid "Waiting for the public authority to reply"
 msgstr "Aşteaptă răspunsul autorităţii publice"
@@ -3149,7 +3149,7 @@ msgid "Was the response you got to your FOI request any good?"
 msgstr "Răspunsul pe care l-aţi primit la solicitarea dvs. FOI vi-a fost de folos?"
 
 msgid "We do not have a working request email address for this authority."
-msgstr "Nu avem o adresă de email valabilă pentru solicitările adresate acestei autoritate."
+msgstr "Nu avem o adresă de email valabilă pentru solicitările adresate acestei instituție."
 
 msgid ""
 "We do not have a working {{law_used_full}} address for {{public_body_name}}."
@@ -3388,7 +3388,7 @@ msgstr "Ar fi trebuit să primești o copie a solicitării tale prin email și p
 msgid ""
 "You want to <strong>give your postal address</strong> to the authority in "
 "private."
-msgstr "Vreţi să <strong>vă daţi adresa dvs. poştală</strong> către autoritate în privat."
+msgstr "Vreţi să <strong>vă daţi adresa dvs. poştală</strong> către instituție în privat."
 
 msgid ""
 "You will be unable to make new requests, send follow ups, add annotations "
@@ -3851,7 +3851,7 @@ msgstr "{{site_name}} acoperă solicitările către  {{number_of_authorities}} a
 msgid ""
 "{{site_name}} sends new requests to <strong>{{request_email}}</strong> for "
 "this authority."
-msgstr "{{site_name}} trimite noi solicitări către <strong>{{request_email}}</strong> pentru această autoritate."
+msgstr "{{site_name}} trimite noi solicitări către <strong>{{request_email}}</strong> pentru această instituție."
 
 msgid ""
 "{{site_name}} users have made {{number_of_requests}} requests, including:"
