privacy policy fixes

--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -4006,7 +4006,7 @@ msgid "Proceso de las solicitudes"
 msgstr "Procesarea solicitărilor"
 
 msgid "Privacidad"
-msgstr "Politică de Confidențialitate"
+msgstr "Politică de confidențialitate"
 
 msgid "Basado en Alaveteli"
 msgstr "Bazat pe Alaveteli"
@@ -4030,7 +4030,7 @@ msgid "Condiciones de uso"
 msgstr "Termeni și condiții"
 
 msgid "Política de privacidad"
-msgstr "Politică de Confidențialitate"
+msgstr "Politică de confidențialitate"
 
 msgid "Ayuda"
 msgstr "Ajutor"
