some more small fixes

--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -3971,6 +3971,12 @@ msgstr "ce este aceasta?"
 msgid "{{count}} FOI requests found"
 msgstr "{{count}} solicitări de acces la informații găsite"
 
+msgid "%d Freedom of Information request to %s"
+msgid_plural "%d Freedom of Information requests to %s"
+msgstr[0] "%d solicitare de infromație instituției "
+msgstr[1] "%d solicitări de infromație instituției "
+msgstr[2] "%d solicitări de infromație instituției "
+
 msgid "{{count}} Freedom of Information request to {{public_body_name}}"
 msgid_plural ""
 "{{count}} Freedom of Information requests to {{public_body_name}}"
@@ -3983,6 +3989,11 @@ msgid_plural "{{count}} people are following this authority"
 msgstr[0] "{{count}} persoană  urmăreşte această autoritate"
 msgstr[1] "{{count}} persoane  urmăresc această autoritate"
 msgstr[2] "{{count}} persoane  urmăresc această autoritate"
+
+msgid "<span id='follow_count'>%d</span> person is following this authority"
+msgid_plural "<span id='follow_count'>%d</span> people are following this authority"
+msgstr[0] "<span id='follow_count'>%d</span> persoană  urmăreşte această autoritate"
+msgstr[1] "<span id='follow_count'>%d</span> persoane  urmăresc această autoritate"
 
 msgid "{{count}} request"
 msgid_plural "{{count}} requests"
