--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -3973,9 +3973,9 @@ msgstr "{{count}} solicitări de acces la informații găsite"
 
 msgid "%d Freedom of Information request to %s"
 msgid_plural "%d Freedom of Information requests to %s"
-msgstr[0] "%d solicitare de infromație instituției "
-msgstr[1] "%d solicitări de infromație instituției "
-msgstr[2] "%d solicitări de infromație instituției "
+msgstr[0] "%d solicitare de infromație instituției %s"
+msgstr[1] "%d solicitări de infromație instituției %s"
+msgstr[2] "%d solicitări de infromație instituției %s"
 
 msgid "{{count}} Freedom of Information request to {{public_body_name}}"
 msgid_plural ""
