small text changes

--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -169,8 +169,8 @@ msgid ""
 msgstr "<a href=\"{{browse_url}}\">Caută în toată arhiva</a> sau <a href=\"{{add_url}}\">cere-ne nouă să adăugăm una</a>."
 
 msgid ""
-"<a href=\"{{url}}\">Add an annotation</a> (to help the requester or others)"
-msgstr "<a href=\"{{url}}\">Adaugă o notă</a> (pentru a ajuta petentul sau pe alții)"
+"<a href=\"%s\">Add an annotation</a> (to help the requester or others)"
+msgstr "<a href=\"%s\">Adaugă o notă</a> (pentru a ajuta petentul sau pe alții)"
 
 msgid ""
 "<a href=\"{{url}}\">Sign in</a> to change password, subscriptions and more "
@@ -251,7 +251,10 @@ msgid ""
 " below saying what you did.</p><p>If you found {{site_name}} useful, <a "
 "href=\"{{donation_url}}\">make a donation</a> to the charity which runs "
 "it.</p>"
-msgstr "<p>Ne bucurăm tare mult că ai obţinut informaţiile pe care le doreai! Dacă vei scrie despre cum ţi-au folosit aceste informaţii, te rugăm să completezi mai jos un scurt istoric care va fi util celor ce vor face solicitări similare. </p><p>  Dacă ai găsit {{site_name}} util, poţi face , <a href=\"{{donation_url}}\"> o mică donaţie</a>  pentru a atenua din costurile de întreţinere pe care le avem cu serverele.</p>"
+msgstr "<p>Ne bucurăm tare mult că ai obţinut informaţiile pe care le doreai! "
+"Dacă vei scrie despre cum ţi-au folosit aceste informaţii, te rugăm să "
+"completezi mai jos un scurt istoric care va fi util celor ce vor face "
+"solicitări similare. </p>"
 
 msgid ""
 "<p>We're glad you got some of the information that you wanted. If you found "
