--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -435,7 +435,7 @@ msgid ""
 "A <a href=\"{{request_url}}\">response</a> to <em>{{request_title}}</em> was"
 " sent by {{public_body_name}} to {{info_request_user}} on {{date}}.  The "
 "request status is: {{request_status}}"
-msgstr "Un <a href=\"{{request_url}}\">răspuns</a> to <em>{{request_title}}</em> a fost trimis de către {{public_body_name}} către {{info_request_user}} la {{date}}.  Starea soloicitării este: {{request_status}}"
+msgstr "Un <a href=\"{{request_url}}\">răspuns</a> to <em>{{request_title}}</em> a fost trimis de către {{public_body_name}} către {{info_request_user}} la {{date}}.  Starea solicitării este: {{request_status}}"
 
 msgid ""
 "A <strong>summary</strong> of the response if you have received it by post. "
@@ -645,7 +645,7 @@ msgstr "Conform legii, în oricare circumstanţe, {{public_body_link}} ar fi tre
 msgid ""
 "By law, {{public_body_link}} should normally have responded "
 "<strong>promptly</strong> and"
-msgstr "Conform legii {{public_body_link}} ar fi trebuit să vă răspundă <strong>propmt </strong> si "
+msgstr "Conform legii {{public_body_link}} ar fi trebuit să vă răspundă <strong>promt </strong> si "
 
 msgid "Calculated home page"
 msgstr "Calculated home page"
@@ -858,7 +858,7 @@ msgid "Destroy {{name}}"
 msgstr "Distruge {{name}}"
 
 msgid "Details of request '"
-msgstr "Detaliile soloicitării"
+msgstr "Detaliile solicitării"
 
 msgid "Did you mean: {{correction}}"
 msgstr "Aţi vrut să spuneţi:  {{correction}}"
@@ -1162,7 +1162,7 @@ msgstr ""
 msgid ""
 "Hello! You can make Freedom of Information requests within {{country_name}} "
 "at {{link_to_website}}"
-msgstr "Hello! Puteţi face solicitări  \"Libertatea de informare\" în  {{country_name}} la {{link_to_website}}"
+msgstr "Puteţi face solicitări  \"Libertatea de informare\" în  {{country_name}} la {{link_to_website}}"
 
 msgid "Hello, {{username}}!"
 msgstr "Hello, {{username}}!"
@@ -2538,7 +2538,7 @@ msgid ""
 msgstr "Vă mulţumim pentru actualizarea stării pentru solicitarea  '<a href=\"{{url}}\">{{info_request_title}}</a>'. Mai există câteva solicitări mai jos pe care ar trebui să le clasificaţi."
 
 msgid "Thank you for updating this request!"
-msgstr "Mulţumim pentru actualizarea soloicitării!"
+msgstr "Mulţumim pentru actualizarea solicitării!"
 
 msgid "Thank you for updating your profile photo"
 msgstr "Mulţumim pentru actualizarea pozei de profil"
@@ -2608,7 +2608,7 @@ msgid "The public authority does not have the information requested"
 msgstr "Autritatea publică nu deţine informaţiile solicitate"
 
 msgid "The public authority would like part of the request explained"
-msgstr "Autritatea publică ar dori explicarea unei părţi a soloicitării"
+msgstr "Autritatea publică ar dori explicarea unei părţi a solicitării"
 
 msgid "The public authority would like to / has responded by post"
 msgstr "Autoritatea ar  vrea să răspundă/a răspuns prin postare"
@@ -2692,7 +2692,7 @@ msgid "Then you can log into the administrative interface"
 msgstr "Apoi vă puteţi conecta la interfaţa administrativă"
 
 msgid "Then you can play the request categorisation game."
-msgstr "Apoi puteţi să jucaţi jocul de categorisire  a soloicitării."
+msgstr "Apoi puteţi să jucaţi jocul de categorisire  a solicitării."
 
 msgid "Then you can report the request '{{title}}'"
 msgstr "Apoi puteţi raporta solicitarea '{{title}}'"
@@ -3035,7 +3035,7 @@ msgid "To log into the administrative interface"
 msgstr "Pentru a vă conecta la interfaţa administrativă"
 
 msgid "To play the request categorisation game"
-msgstr "Pentru a juca jocu categorisirea soloicitării"
+msgstr "Pentru a juca jocu categorisirea solicitării"
 
 msgid "To post your annotation"
 msgstr "Pentru a posta adnotarea ta"
@@ -3306,7 +3306,9 @@ msgid ""
 "We don't know whether the most recent response to this request contains\\n"
 "    information or not\\n        &ndash;\\n\tif you are {{user_link}} please"
 " <a href=\"{{url}}\">sign in</a> and let everyone know."
-msgstr "Nu ştim dacă cel mai recent răspuns la această solicitare conţine\\ninformaţie sau nu\\n &ndash;\\n»dacă ştii{{user_link}} te rugăm<a href=\"{{url}}\">autentifică-te</a>şi permite accesul tuturor."
+msgstr "Nu ştim dacă cel mai recent răspuns la această solicitare "
+"conţineinformația căutată sau nu\\n &ndash;\\n» dacă ești {{user_link}} te "
+"rugăm <a href=\"{{url}}\">să te autentifici</a> și să ne spui."
 
 msgid ""
 "We will not reveal your email address to anybody unless you or\\n        the"
@@ -4036,7 +4038,7 @@ msgid "{{law_used_full}} request - {{title}}"
 msgstr "Solicitare {{law_used_full}}  - {{title}}"
 
 msgid "{{law_used_full}} request GQ - {{title}}"
-msgstr "Solicitare  GQ {{law_used_full}}  - {{title}}"
+msgstr "Solicitare {{law_used_full}}  - {{title}}"
 
 msgid "{{law_used}} requests at {{public_body}}"
 msgstr "{{law_used}} solicitări către {{public_body}}"
