--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -170,7 +170,7 @@ msgstr "<a href=\"{{browse_url}}\">Caută în toată arhiva</a> sau <a href=\"{{
 
 msgid ""
 "<a href=\"%s\">Add an annotation</a> (to help the requester or others)"
-msgstr "<a href=\"%s\">Adaugă o notă</a> (pentru a ajuta petentul sau pe alții)"
+msgstr "<a href=\"%s\">Adaugă o adnotare</a> (pentru a ajuta petentul sau pe alții)"
 
 msgid ""
 "<a href=\"{{url}}\">Sign in</a> to change password, subscriptions and more "
