--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -168,6 +168,12 @@ msgid ""
 "to add one</a>."
 msgstr "<a href=\"{{browse_url}}\">Caută în toată arhiva</a> sau <a href=\"{{add_url}}\">cere-ne nouă să adăugăm una</a>."
 
+msgid "<a href=\"%s\">Can't find the one you want?</a>"
+msgstr "<a href=\"%s\">Nu ai găsit ce căutai?</a>"
+
+msgid "<a href=\"%s\">Sign in</a> to change password, subscriptions and more ({{user_name}} only)"
+msgstr "<a href=\"%s\">Autentifică-te</a> pentru a schimba parola sau alertele (numai {{user_name}})"
+
 msgid ""
 "<a href=\"%s\">Add an annotation</a> (to help the requester or others)"
 msgstr "<a href=\"%s\">Adaugă o adnotare</a> (pentru a ajuta petentul sau pe alții)"
@@ -308,9 +314,10 @@ msgid ""
 msgstr "<small>Dacă utilizaţi un serviciu email  de tip web sau dacă aveţi filtre pentru poşta nedorită, verificaţi de asemenea folderele  \\nbulk/spam de email. Uneori mesajele noastre sunt marcate astfel.</small>\\n</p>"
 
 msgid ""
-"<strong> Can I request information about myself?</strong>\\n\t\t\t<a "
-"href=\"{{url}}\">No! (Click here for details)</a>"
-msgstr "<strong> Pot să solicit informaţii despre mine însumi?</strong>\\n\t\t\t<a href=\"{{url}}\">Nu! (Click aici pentur detalii)</a>"
+"<strong> Can I request information about myself?</strong>\n\t\t\t<a "
+"href=\"%s\">No! (Click here for details)</a>
+msgstr "<strong>Pot să solicit informaţii despre mine?</strong>"
+"<a href=\"%s\">Nu! (Click aici pentur detalii)</a>"
 
 msgid ""
 "<strong><code>commented_by:tony_bowden</code></strong> to search annotations"
@@ -404,8 +411,9 @@ msgstr "<strong>Notă:</strong>\\n Vom trimite un email către noua ta adresă d
 
 msgid ""
 "<strong>Privacy note:</strong> If you want to request private information "
-"about\\n    yourself then <a href=\"{{url}}\">click here</a>."
-msgstr "<strong>Notă de confidențialitate:</strong> Dacă dorești să soliciți informații personale despre\\n tine atunci <a href=\"{{url}}\">apasă aici</a>."
+"about\\n    yourself then <a href=\"%s\">click here</a>."
+msgstr "<strong>Notă de confidențialitate:</strong> Dacă dorești să soliciți "
+"informații personale despre tine atunci <a href=\"{{url}}\">apasă aici</a>."
 
 msgid ""
 "<strong>Privacy note:</strong> Your photo will be shown in public on the "
@@ -953,8 +961,11 @@ msgstr "Eveniment {{id}}"
 msgid ""
 "Everything that you enter on this page, including <strong>your "
 "name</strong>,\\n                will be <strong>displayed publicly</strong>"
-" on\\n                this website forever (<a href=\"{{url}}\">why?</a>)."
-msgstr "Tot ce introduci pe această pagină, inclusiv  <strong>numele tău</strong>, \\n va fi <strong>făcut public</strong> pe\\n acest website permanent (<a href=\"{{url}}\">de ce?</a>)."
+" on\\n                this website forever (<a href="%s">why?</a>)."
+msgstr ""
+"Tot ce introduci pe această pagină, inclusiv <strong>numele tău</strong>, "
+"va fi <strong>făcut public</strong> pe acest site permanent "
+"(<a href=\"%s\">de ce?</a>)."
 
 msgid ""
 "Everything that you enter on this page\\n                will be "
@@ -1088,11 +1099,11 @@ msgstr "Pentru motive necunoscute, nu este posibil să facem o solicitare către
 msgid "Forgotten your password?"
 msgstr "Aţi uitat parola ?"
 
-msgid "Found {{count}} public authority {{description}}"
-msgid_plural "Found {{count}} public authorities {{description}}"
-msgstr[0] "Găsit {{count}} autoritate publică {{description}}"
-msgstr[1] "Găsit {{count}} autorităţi publice {{description}}"
-msgstr[2] "Găsit autorităţi publice {{description}}"
+msgid "Found %d public authority %s"
+msgid_plural "Found %d public authorities %s"
+msgstr[0] "Găsit %d autorități publice %s"
+msgstr[1] "Găsit %d autorități publice %s"
+msgstr[2] "Găsit %d autorități publice %s"
 
 msgid "Freedom of Information"
 msgstr "de acces la informație"
@@ -1305,8 +1316,8 @@ msgstr "Dacă sunteţi solicitantul, atunci trebuie să <a href=\"{{url}}\">vă 
 
 msgid ""
 "If you are thinking of using a pseudonym,\\n                please <a "
-"href=\"{{url}}\">read this first</a>."
-msgstr "Dacă dorești să folosești un pseudonim,\\n te rugăm <a href=\"{{url}}\">să citești întâi asta</a>."
+"href=\"%s\">read this first</a>."
+msgstr "Dacă dorești să folosești un pseudonim, te rugăm <a href=\"%s\">să citești întâi asta</a>."
 
 msgid "If you are {{user_link}}, please"
 msgstr "Dacă sunteţi{{user_link}}, vă rugăm"
@@ -1511,8 +1522,9 @@ msgstr "Încă un singur lucru"
 
 msgid ""
 "Keep it <strong>focused</strong>, you'll be more likely to get what you want"
-" (<a href=\"{{url}}\">why?</a>)."
-msgstr "Fă o solicitare  <strong> la obiect</strong>, va fi mai probabil să obții ceea ce vrei (<a href=\"{{url}}\">why?</a>)."
+" (<a href="%s">why?</a>)."
+msgstr "Fă o solicitare <strong>la obiect</strong>, va fi mai probabil să obții"
+" ceea ce vrei (<a href=\"%s\">detalii</a>)."
 
 msgid "Keywords"
 msgstr "Cuvinte cheie"
@@ -2872,17 +2884,17 @@ msgstr "Acestă persoană nu a făcut nici o solicitare de acces la informații 
 msgid "This person's annotations"
 msgstr "Adnotările acestei persoane"
 
-msgid "This person's {{count}} Freedom of Information request"
-msgid_plural "This person's {{count}} Freedom of Information requests"
-msgstr[0] "A {{count}} -a solicitare FOI a acestei persoane"
-msgstr[1] "A {{count}} -a solicitare FOI a acestei persoane"
-msgstr[2] "{{count}} solicitări de acces la informații ale acestei persoane"
+msgid "This person's %d Freedom of Information request"
+msgid_plural "This person's %d Freedom of Information requests"
+msgstr[0] "Acest utilizator a făcut %d solicitări de acces la infromație"
+msgstr[1] "Acest utilizator a făcut %d solicitări de acces la infromație"
+msgstr[2] "Acest utilizator a făcut %d solicitări de acces la infromație"
 
-msgid "This person's {{count}} annotation"
-msgid_plural "This person's {{count}} annotations"
-msgstr[0] "A {{count}} -a adnotare a acestei persoane"
-msgstr[1] "A {{count}} -a adnotare a acestei persoane"
-msgstr[2] "A {{count}} -a adnotare a acestei persoane"
+msgid "This person\'s %d annotation"
+msgid_plural "This person's %d annotations"
+msgstr[0] "Acest utilizator a făcut %d adnotări"
+msgstr[1] "Acest utilizator a făcut %d adnotări"
+msgstr[2] "Acest utilizator a făcut %d adnotări"
 
 msgid "This request <strong>requires administrator attention</strong>"
 msgstr "Acestă solicitare <strong>necesită atenţia administratorului</strong>"
@@ -3311,7 +3323,7 @@ msgid ""
 "    information or not\\n        &ndash;\\n\tif you are {{user_link}} please"
 " <a href=\"{{url}}\">sign in</a> and let everyone know."
 msgstr "Nu ştim dacă cel mai recent răspuns la această solicitare "
-"conţineinformația căutată sau nu\\n &ndash;\\n» dacă ești {{user_link}} te "
+"conţine informația căutată sau nu\\n &ndash;\\n» dacă ești {{user_link}} te "
 "rugăm <a href=\"{{url}}\">să te autentifici</a> și să ne spui."
 
 msgid ""
@@ -3626,8 +3638,9 @@ msgstr "Numele şi adnotarea ta vor apărea în <strong>motoarele de căutare</s
 
 msgid ""
 "Your name, request and any responses will appear in <strong>search "
-"engines</strong>\\n        (<a href=\"{{url}}\">details</a>)."
-msgstr "Numele tău, solicitările tale şi orice răspunsuri vei primi vor apărea în <strong>motoare de căutare  </strong>\\n (<a href=\"{{url}}\">details</a>)."
+"engines</strong>\\n        (<a href=\"%s\">details</a>)."
+msgstr "Numele tău, solicitările tale şi orice răspunsuri vei primi vor "
+"apărea în <strong>motoarele de căutare </strong>(<a href=\"%s\">detalii aici</a>)."
 
 msgid "Your name:"
 msgstr "Numele tău:"
